--- a/acsets/css/base.css
+++ b/acsets/css/base.css
@@ -2,6 +2,7 @@
   --white-color: #fff;
   --black-color: #000;
   --text-color: #333;
+  --primary-color: #ee4d2d;
 }
 * {
   box-sizing: inherit;
@@ -27,4 +28,15 @@ html {
 .grid__row {
   display: flex;
   flex-wrap: wrap;
+}
+
+/* animation */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
